--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "conventional-changelog": "*",
-    "eclint": "*",
-    "eslint": "*",
-    "espower-loader": "*",
-    "fixpack": "*",
-    "globstar": "*",
-    "mocha": "*",
-    "npm-check-updates": "*",
-    "power-assert": "*",
-    "touch": "*"
+    "conventional-changelog": "^0.5.0",
+    "eclint": "^1.1.5",
+    "eslint": "^1.7.1",
+    "espower-loader": "^1.0.0",
+    "fixpack": "^2.2.0",
+    "globstar": "^1.0.0",
+    "mocha": "^2.3.3",
+    "npm-check-updates": "^2.3.2",
+    "power-assert": "^1.1.0",
+    "touch": "^1.0.0"
   },
   "engines": {
     "node": ">=0.10.0"
