--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,9 @@ node_js:
 script: 'npm run verify'
 install:
   - 'travis_retry npm install'
+addons:
+  firefox: 'latest'
+before_install:
+- export DISPLAY=:99.0
+- sh -e /etc/init.d/xvfb start
+before_script: "node_modules/.bin/testem launchers"
