chore(appveyor): add firefox, chrome

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,6 +11,8 @@ environment:
 
 # install
 install:
+- choco install firefox
+- choco install googlechrome
 - ps: . .\Execute-With-Retry
 - ps: Execute-With-Retry { Install-Product node $env:nodejs_version }
 - node --version
