--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "lint": "npm run eclint && npm run eslint",
     "ncu": "ncu -u",
     "test": "testem",
-    "verify": "npm run lint && npm run test"
+    "test:ci": "testem ci",
+    "verify": "npm run lint && npm run test",
+    "verify:ci": "npm run lint && npm run test:ci"
   }
 }
