--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ node_js:
   - '0.12'
   - 'iojs-3'
   - '4'
-script: 'npm run verify:ci'
+script: 'npm run verify:travis'
 install:
   - 'travis_retry npm install'
 addons:
