--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "browserify": "^11.2.0",
     "conventional-changelog": "^0.5.0",
+    "derequire": "^2.0.2",
     "eclint": "^1.1.5",
     "eslint": "^1.7.1",
     "espower-loader": "^1.0.0",
@@ -40,7 +41,7 @@
   "license": "MIT",
   "repository": "quietmole/node-link-plain",
   "scripts": {
-    "build:browser": "exit 1",
+    "build:browser": "npm prune && npm dedupe && browserify --standalone linkPlain ./index.js | derequire > build/link-plain.js",
     "build:test-bundled": "browserify -t espowerify test.js > test-bundled.js",
     "changelog": "touch changelog.md && conventional-changelog -i changelog.md --overwrite --preset angular",
     "clear:test-bundled": "rimraf ./test-bundled.js",
