chore(build): add built file for package

--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "node": ">=4.0.0"
   },
   "files": [
-    "index.js"
+    "index.js",
+    "build"
   ],
   "keywords": [
     "bookmarklet",
