--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "email": "o.gata.ken@gmail.com",
     "url": "sane.jp"
   },
-  "dependencies": {},
+  "dependencies": {
+    "lodash.compact": "^3.0.0"
+  },
   "devDependencies": {
     "browserify": "^11.2.0",
     "conventional-changelog": "^0.5.0",
