chore(app): bump version to v2.0.0-beta.1

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "browser-title-or-selection",
   "description": "Get current page title or selection text.",
-  "version": "1.0.0",
+  "version": "2.0.0-beta.1",
   "author": {
     "name": "sanemat",
     "email": "o.gata.ken@gmail.com",
