--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "browser-selected-text-or-title",
   "description": "Get selected text or current page title.",
-  "version": "3.0.0-beta.1",
+  "version": "3.0.0",
   "author": {
     "name": "sanemat",
     "email": "o.gata.ken@gmail.com",
