--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   },
   "files": [
     "index.js",
-    "build"
+    "build/browser-selected-text-or-title.js"
   ],
   "keywords": [
     "bookmarklet",
