--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,8 +9,6 @@ environment:
 
 # install
 install:
-- choco install firefox
-- choco install googlechrome
 - ps: . .\Execute-With-Retry
 - ps: Execute-With-Retry { Install-Product node $env:nodejs_version }
 - node --version
@@ -22,7 +20,7 @@ build: off
 
 # test
 test_script:
-- npm run verify:appveyor
+- npm run verify
 
 # deploy
 deploy: off
